2005-03-05 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSApplication.m (-_windowDidResignKey:) Unhide mouse.

2005-03-05 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSScroller.m (-checkSpaceForParts, -rectForPart:) Calculate
	buttonsWidth variable dynamically based on +scrollerWidth (supports
	width override by subclass).

2005-03-05 10:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDataLink.h
	* Headers/AppKit/NSDataLinkManager.h: Added some ivars
	* Source/Functions.m: Changed the NSLinkFrameThickness() function to
	return 1 instead of 1.5.
	* Source/NSDataLink.m: Implemented several methods.
	* Source/NSDataLinkManager.m: Implemented several methods.
	* Source/NSDataLinkPanel.m: Change version from 1 to 0.
	* Source/NSSelection.m: Change version from 1 to 0, corrected 
	but in initWithCoder:.

2005-03-03  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Disable gsnd on darwin
	
	* Tools/GNUmakefile.preamble (GSspell_TOOL_LIBS): Add lib depends.

2005-02-27 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSApplication.m (-runModalForWindow:) Clarify gsdoc
	explaining why we don't follow Apple docs here.  (Corrects gsdoc
	from change on 2005-01-26, which itself documented a code change on
	2005-01-18.)

2005-02-26 18:04  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/Additions/GNUstepGUI/GSServicesManager.h: Include the
	NSMenuItem.h header instead of forward declaring the NSMenuItem
	protocol.

2005-02-23  Fred Kiefer <FredKiefer@gmx.de>

	* Header/AppKit/NSColor.h (-alternateSelectedControlColor,
	-alternateSelectedControlTextColor,
	-secondarySelectedControlColor,
	controlAlternatingRowBackgroundColors): New MacOSX system colour methods.
	* Source/NSColor.m (-alternateSelectedControlColor,
	-alternateSelectedControlTextColor,
	-secondarySelectedControlColor,
	controlAlternatingRowBackgroundColors): Implemented the new
	methods.
	(initSystemColors): Added default values for new system coloure methods
